--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <div class="gameboard">
-      <div class="one"></div>
-      <div class="two"></div>
-      <div class="three"></div>
-      <div class="four"></div>
-      <div class="five"></div>
-      <div class="six"></div>
-      <div class="seven"></div>
-      <div class="eight"></div>
-      <div class="nine"></div>
+      <div class="1"></div>
+      <div class="2"></div>
+      <div class="3"></div>
+      <div class="4"></div>
+      <div class="5"></div>
+      <div class="6"></div>
+      <div class="7"></div>
+      <div class="8"></div>
+      <div class="9"></div>
     </div>
   </body>
 </html>
