--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <div class="gameboard">
-      <div class="1"></div>
-      <div class="2"></div>
-      <div class="3"></div>
-      <div class="4"></div>
-      <div class="5"></div>
-      <div class="6"></div>
-      <div class="7"></div>
-      <div class="8"></div>
-      <div class="9"></div>
-    </div>
+    <div class="gameboard"></div>
   </body>
 </html>
