--- a/index.html
+++ b/index.html
@@ -11,5 +11,38 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <div class="gameboard"></div>
+    <div class="user-entry overlay">
+      <form>
+        <div>
+          <label for="player_name">Player 1</label>
+          <input type="text" name="player_1" id="player_1" />
+          <div class="radios">
+            <div>
+              <input type="radio" id="weapon_1" name="weapon_1" value="X" />
+              <label for="weapon_1">X</label>
+            </div>
+            <div>
+              <input type="radio" id="weapon_1" name="weapon_1" value="O" />
+              <label for="weapon_1">O</label>
+            </div>
+          </div>
+        </div>
+        <div>
+          <label for="player_name">Player 2</label>
+          <input type="text" name="player_2" id="player_2" />
+          <div class="radios">
+            <div>
+              <input type="radio" id="weapon_2" name="weapon_2" value="X" />
+              <label for="weapon_2">X</label>
+            </div>
+            <div>
+              <input type="radio" id="weapon_2" name="weapon_2" value="O" />
+              <label for="weapon_2">O</label>
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="btn-dark">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
