--- a/index.html
+++ b/index.html
@@ -13,44 +13,20 @@
     <div class="gameboard"></div>
     <div class="user-entry overlay">
       <form>
-        <div>
+        <div class="player1-input">
           <label for="player_name">Player 1</label>
           <input type="text" name="player_1" id="player_1" placeholder="Name" />
-          <div class="radios">
-            <div>
-              <input
-                type="radio"
-                id="weapon_1"
-                name="weapon_1"
-                value="X"
-                checked
-              />
-              <label for="weapon_1">X</label>
-            </div>
-            <div>
-              <input type="radio" id="weapon_1" name="weapon_1" value="O" />
-              <label for="weapon_1">O</label>
-            </div>
+          <div class="weapon">
+            <div class="X box">X</div>
+            <div class="O box">O</div>
           </div>
         </div>
-        <div>
+        <div class="player2-input">
           <label for="player_name">Player 2</label>
           <input type="text" name="player_2" id="player_2" placeholder="Name" />
-          <div class="radios">
-            <div>
-              <input type="radio" id="weapon_2" name="weapon_2" value="X" />
-              <label for="weapon_2">X</label>
-            </div>
-            <div>
-              <input
-                type="radio"
-                id="weapon_2"
-                name="weapon_2"
-                value="O"
-                checked
-              />
-              <label for="weapon_2">O</label>
-            </div>
+          <div class="weapon">
+            <div class="X box">X</div>
+            <div class="O box">O</div>
           </div>
         </div>
         <button type="submit" class="btn-dark">Fight!</button>
