--- a/index.html
+++ b/index.html
@@ -10,27 +10,39 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <div class="gameboard"></div>
-    <div class="user-entry overlay">
-      <form>
-        <div class="player1-input">
-          <label for="player_name">Player 1</label>
-          <input type="text" name="player_1" id="player_1" placeholder="Name" />
-          <div class="weapon">
-            <div class="X box">X</div>
-            <div class="O box">O</div>
+    <main>
+      <div class="gameboard"></div>
+      <div class="user-entry overlay">
+        <form>
+          <div class="player1-input">
+            <label for="player_name">Player 1</label>
+            <input
+              type="text"
+              name="player_1"
+              id="player_1"
+              placeholder="Name"
+            />
+            <div class="weapon">
+              <div class="X box">X</div>
+              <div class="O box">O</div>
+            </div>
           </div>
-        </div>
-        <div class="player2-input">
-          <label for="player_name">Player 2</label>
-          <input type="text" name="player_2" id="player_2" placeholder="Name" />
-          <div class="weapon">
-            <div class="X box">X</div>
-            <div class="O box">O</div>
+          <div class="player2-input">
+            <label for="player_name">Player 2</label>
+            <input
+              type="text"
+              name="player_2"
+              id="player_2"
+              placeholder="Name"
+            />
+            <div class="weapon">
+              <div class="X box">X</div>
+              <div class="O box">O</div>
+            </div>
           </div>
-        </div>
-        <button type="submit" class="btn-dark">Fight!</button>
-      </form>
-    </div>
+          <button type="submit" class="btn-dark">Fight!</button>
+        </form>
+      </div>
+    </main>
   </body>
 </html>
