--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               type="text"
               name="player_1"
               id="player_1"
-              placeholder="Name"
+              placeholder="Name (optional)"
             />
             <div class="weapon">
-              <div class="X box">X</div>
+              <div class="X box selected">X</div>
               <div class="O box">O</div>
             </div>
           </div>
@@ -33,11 +33,11 @@
               type="text"
               name="player_2"
               id="player_2"
-              placeholder="Name"
+              placeholder="Name (optional)"
             />
             <div class="weapon">
               <div class="X box">X</div>
-              <div class="O box">O</div>
+              <div class="O box selected">O</div>
             </div>
           </div>
           <button type="submit" class="btn-dark">Fight!</button>
