--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
               placeholder="Name (optional)"
             />
             <div class="weapon">
-              <div class="p1x box selected">X</div>
-              <div class="p1o box">O</div>
+              <div class="p1x box selected" data-weapon="X">X</div>
+              <div class="p1o box" data-weapon="O">O</div>
             </div>
           </div>
           <div class="player2-input">
@@ -36,8 +36,8 @@
               placeholder="Name (optional)"
             />
             <div class="weapon">
-              <div class="p2x box">X</div>
-              <div class="p2o box selected">O</div>
+              <div class="p2x box" data-weapon="X">X</div>
+              <div class="p2o box selected" data-weapon="O">O</div>
             </div>
           </div>
           <button type="submit" class="btn-dark">Fight!</button>
